2.80 Beta: Select Objects in Collection not working #58258

Closed
opened 2018-11-30 02:31:37 +01:00 by chaos · 8 comments
Member

Blender Branch: blender2.8
Blender Hash: 63c0653170

The new operator to select objects in a collection is not working.
It doesn't work in the Object context panel, specifically in Object > Collections > Dropdown menu from any collection > Select Objects in Collection.
It doesn't work from the Search popup either, and running bpy.ops.object.collection_objects_select() from python console returns {'CANCELLED'}

Blender Branch: blender2.8 Blender Hash: 63c06531707 The new operator to select objects in a collection is not working. It doesn't work in the Object context panel, specifically in Object > Collections > Dropdown menu from any collection > Select Objects in Collection. It doesn't work from the Search popup either, and running bpy.ops.object.collection_objects_select() from python console returns {'CANCELLED'}
Author
Member

Added subscriber: @chaos-4

Added subscriber: @chaos-4

Added subscriber: @MaciejJutrzenka

Added subscriber: @MaciejJutrzenka

i think we can merge this with my report https://developer.blender.org/T58234
Whole collection think is just a mess :(

i think we can merge this with my report https://developer.blender.org/T58234 Whole collection think is just a mess :(
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2018-11-30 10:25:57 +01:00
Member

@MaciejJutrzenka: I would actually prefer to keep this a separate report.
(this way it is easier to address issues one by one, rather than mixing multiple issues in a single report...)

For this one, I can confirm, will check in a bit... (it does work in the outliner RMB menu, the python case I think needs to have right [overriden] context, but the operator in the Collections Panel dropdown should really work out of the box...)

@MaciejJutrzenka: I would actually prefer to keep this a separate report. (this way it is easier to address issues one by one, rather than mixing multiple issues in a single report...) For this one, I can confirm, will check in a bit... (it **does** work in the outliner RMB menu, the python case I think needs to have right [overriden] context, but the operator in the Collections Panel dropdown should really work out of the box...)

This issue was referenced by 764e937d1a

This issue was referenced by 764e937d1a77b99d384a729700a08ef6fbe7bfac
Member

Collection Panel dropdown is addressed by D4023, I think.

For the python case, you still have to do something like [which sounds a little redundant, havent checked further...]:

override = bpy.context.copy()
override["collection"] = bpy.context.collection
bpy.ops.object.collection_objects_select(override)
Collection Panel dropdown is addressed by [D4023](https://archive.blender.org/developer/D4023), I think. For the python case, you still have to do something like [which sounds a little redundant, havent checked further...]: ``` override = bpy.context.copy() override["collection"] = bpy.context.collection bpy.ops.object.collection_objects_select(override) ```
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58258
No description provided.