Fix T58258: Select Objects in Collection not working

Maniphest Tasks: T58258

Differential Revision: https://developer.blender.org/D4023